--- a/nats.conf
+++ b/nats.conf
@@ -10,5 +10,5 @@ jetstream {
 
 authorization {
   # Token for test purposes
-  token: dfji348934jdd0i24uhjd29834ijrr0345jo0r3j034n
+  token: testtoken123 
 }
