--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ telemetryAgent:
   brokers:
     - name: ligmaMyNats
       type: nats
-      address: "localhost:4222"
+      address: "nats_main:4222"
       auth:
         method: plain
         user: test
